# zrive-ds-4q23-desc-operations

./: .gitignore  README.md  main.py  pyproject.toml
data/: data.csv
exploration/: NOT_optimal_summarizer.ipynb  Optimal_summarizer.ipynb  Scrapping_webs.py
exploration/Pablo/: COVERWALLET.IPYNB  Summarizer.ipynb  scrapping_webs.py
exploration/Pablo/Scrapping_Pablo/: Scrapping_webs.py
exploration/Ramon/: ddgo.py  fase1_GoogleSearch.ipynb
exploration/Unai/: api_linkedin_notebook.ipynb  scraping.ipynb
src/: GoogleSearch.py  exploration.ipynb  fase1_GoogleSearch.ipynb  fase1_wikipedia.ipynb  main.py  scrap_data.py
src/Cover-wallet/: COVERWALLET.IPYNB  Scrapping_webs.py
src/Hugging_face_summarizers/: Hugging_face_sum1.py
src/api_linkedin/: scraping.ipynb
src/credentials/: keys.py
src/data_extraction/: bing_scraper.py  ddgo_scraper.py  google_scraper.py  scraper_web.py  wikipedia_scraper.py
src/data_extraction/credentials/: keys.py
src/data_extraction/utils/: error_parser.py  keys.py  text_parsers.py  web_requests.py
src/data_processing/: data_logic.py
src/data_summarizer/: api_chatgpt.py  bart_large_text_summarizer.py
src/logic/: data_logic.py
src/scrapers/: bing_scraper.py  ddgo_scraper.py  google_scraper.py  scraper_web.py  utilities.py
src/scrapers/utilities/: text_parsers.py
src/scrapers/utils/: text_parsers.py  web_requests.py
zrive_ds/: pyproject.toml
