[tool.poetry]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
authors = ["Guille Barquero <gb@zriveapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
sklearn = "^0.0.post7"
requests = "^2.31.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
boilerpy3 = "^1.0.7"
html2text = "^2020.1.16"
openai = "^1.3.7"
beautifulsoup4 = "^4.12.2"
nltk = "^3.8.1"
spacy = "^3.7.2"
transformers = "^4.35.2"
torch = "^2.1.1"





[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"boilerpy3 = "^1.0.7"
html2text = "^2020.1.16"
openai = "^1.3.7"
beautifulsoup4 = "^4.12.2"
nltk = "^3.8.1"
spacy = "^3.7.2"
transformers = "^4.35.2"
torch = "^2.1.1"


wikipedia-api = "^0.6.0"
wikipedia = "^1.4.0"
scrapy = "^2.11.0"
duckduckgo-search = "^3.9.11"
readability-lxml = "^0.8.1"
bs4 = "^0.0.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
